--- a/NUSClassRoom.html
+++ b/NUSClassRoom.html
@@ -1,21 +1,133 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
 <head>
+	<meta>
 	<title>NUSClassRoom</title>
 	<script type="text/javascript" src="javaScript/jquery-1.11.1.min.js"></script>
-	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<link href="bootstrap/css/OrbitalTemplate.css" rel="stylesheet">
+	<link href="NUS.css" rel="stylesheet">
+	<link href="http://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" tyle='text/css'>
 
-	<script type="text/javascript">
-	alert("Manika cannot download....");
-	</script>
+	<!-- href="bootstrap/css/bootstrap.min.css" rel="stylesheet"-->
 </head>
-
-
 <body>
-<h1>Welcome to NUSClassRoom</h1>
+	<div class="header">
+		<h1>NUSClassRoom</h1>
+	</div>
+
+	<div class="container-fluid">
+		<div class="row">
+
+			<ul class="nav nav-tabs" style="margin-bottom: 15px;">
+				<li class="active"><a href="#home" data-toggle="tab">Home</a></li>
+				<li><a href="#about" data-toggle="tab">About</a></li>
+				<li><a href="#contact" data-toggle="tab">Contact Us</a></li>
+				<!--dropdown-->
+				<li class="dropdown">
+					<a class="dropdown-toggle" data-toggle="dropdown" href="#">
+						Dropdown <span class="caret"></span>
+					</a>
+					<ul class="dropdown-menu">
+						<li><a href="#dropdown1" data-toggle="tab">Action</a></li>
+						<li class="divider"></li>
+						<li><a href="#dropdown2" data-toggle="tab">Another action</a></li>
+					</ul>
+				</li>
+
+			</ul>
+			<div id="myTabContent" class="tab-content">
+				<!--div class="tab-pane fade active in" id="home">
+					<p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+				</div-->
+				<div class="tab-pane fade" id="about">
+					<p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
+				</div>
+				<div class="tab-pane fade" id="contact">
+					<form class="form-horizontal">
+						<fieldset class="contact">
+							<div class="form-group">
+								<label for="inputEmail" class="col-lg-2 control-label">Email</label>
+								<div class="col-lg-10">
+									<input type="text" class="form-control" id="inputEmail" placeholder="Email">
+								</div>
+							</div>
+							<div class="form-group">
+								<label for="inputPassword" class="col-lg-2 control-label">Password</label>
+								<div class="col-lg-10">
+									<input type="password" class="form-control" id="inputPassword" placeholder="Password">
+									<div class="checkbox">
+										<label>
+											<input type="checkbox"> Checkbox
+										</label>
+									</div>
+								</div>
+							</div>
+							<div class="form-group">
+								<label for="textArea" class="col-lg-2 control-label">Textarea</label>
+								<div class="col-lg-10">
+									<textarea class="form-control" rows="3" id="textArea"></textarea>
+									<span class="help-block">A longer block of help text that breaks onto a new line and may extend beyond one line.</span>
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-lg-2 control-label">Radios</label>
+								<div class="col-lg-10">
+									<div class="radio">
+										<label>
+											<input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
+											Option one is this
+										</label>
+									</div>
+									<div class="radio">
+										<label>
+											<input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+											Option two can be something else
+										</label>
+									</div>
+								</div>
+							</div>
+							<div class="form-group">
+								<label for="select" class="col-lg-2 control-label">Selects</label>
+								<div class="col-lg-10">
+									<select class="form-control" id="select">
+										<option>1</option>
+										<option>2</option>
+										<option>3</option>
+										<option>4</option>
+										<option>5</option>
+									</select>
+									<br>
+									<select multiple="" class="form-control">
+										<option>1</option>
+										<option>2</option>
+										<option>3</option>
+										<option>4</option>
+										<option>5</option>
+									</select>
+								</div>
+							</div>
+							<div class="form-group">
+								<div class="col-lg-10 col-lg-offset-2">
+									<button class="btn btn-default">Cancel</button>
+									<button type="submit" class="btn btn-primary">Submit</button>
+								</div>
+							</div>
+						</fieldset>
+					</form>
+				</div>
+
+				<div class="tab-pane fade" id="dropdown1">
+					<p>Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork.</p>
+				</div>
+				<div class="tab-pane fade" id="dropdown2">
+					<p>Trust fund seitan letterpress, keytar raw denim keffiyeh etsy art party before they sold out master cleanse gluten-free squid scenester freegan cosby sweater. Fanny pack portland seitan DIY, art party locavore wolf cliche high life echo park Austin. Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold out farm-to-table VHS viral locavore cosby sweater.</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
 
-<script src="bootstrap/js/bootstrap.min.js"></script>
-<script type="bootstrap/js/respond.js"></script>
+	<script src="bootstrap/js/bootstrap.min.js"></script>
+	<script type="bootstrap/js/respond.js"></script>
 </body>
 </html>
