--- a/NUSClassRoom.html
+++ b/NUSClassRoom.html
@@ -36,98 +36,87 @@
 
 			</ul>
 			<div id="myTabContent" class="tab-content">
-				<!--div class="tab-pane fade active in" id="home">
-					<p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
-				</div-->
-				<div class="tab-pane fade" id="about">
+				<div class="tab-pane fade active in" id="home">
+					<div class="homePg">
+						<div class="col-1">
+							<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+								<!-- Indicators -->
+								<ol class="carousel-indicators">
+									<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+									<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+									<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+								</ol>
+
+								<!-- Wrapper for slides -->
+								<div class="carousel-inner">
+									<div class="item active">
+										<img src="..." alt="...">
+										<div class="carousel-caption">
+											...
+										</div>
+									</div>
+									...
+								</div>
+
+								<!-- Controls -->
+								<a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+									<span class="glyphicon glyphicon-chevron-left"></span>
+								</a>
+								<a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+									<span class="glyphicon glyphicon-chevron-right"></span>
+								</a>
+							</div>
+						</div>
+						<div class="col-2">
+						</div>
+					</div>
+				</div>
+
+				<div class="tab-pan fade" id="about">
 					<p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
 				</div>
 				<div class="tab-pane fade" id="contact">
 					<form class="form-horizontal">
 						<fieldset class="contact">
 							<div class="form-group">
-								<label for="inputEmail" class="col-lg-2 control-label">Email</label>
-								<div class="col-lg-10">
-									<input type="text" class="form-control" id="inputEmail" placeholder="Email">
-								</div>
-							</div>
-							<div class="form-group">
-								<label for="inputPassword" class="col-lg-2 control-label">Password</label>
-								<div class="col-lg-10">
-									<input type="password" class="form-control" id="inputPassword" placeholder="Password">
-									<div class="checkbox">
-										<label>
-											<input type="checkbox"> Checkbox
-										</label>
+								<label for="inputEmail" class="col-lg-2 control-label">Email
+									:</label>
+									<div class="col-lg-10">
+										<input type="text" class="form-control" id="inputEmail" placeholder="Enter your Email address if you want us to get back you">
 									</div>
 								</div>
-							</div>
-							<div class="form-group">
-								<label for="textArea" class="col-lg-2 control-label">Textarea</label>
-								<div class="col-lg-10">
-									<textarea class="form-control" rows="3" id="textArea"></textarea>
-									<span class="help-block">A longer block of help text that breaks onto a new line and may extend beyond one line.</span>
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="col-lg-2 control-label">Radios</label>
-								<div class="col-lg-10">
-									<div class="radio">
-										<label>
-											<input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
-											Option one is this
-										</label>
-									</div>
-									<div class="radio">
-										<label>
-											<input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-											Option two can be something else
-										</label>
-									</div>
-								</div>
-							</div>
-							<div class="form-group">
-								<label for="select" class="col-lg-2 control-label">Selects</label>
-								<div class="col-lg-10">
-									<select class="form-control" id="select">
-										<option>1</option>
-										<option>2</option>
-										<option>3</option>
-										<option>4</option>
-										<option>5</option>
-									</select>
-									<br>
-									<select multiple="" class="form-control">
-										<option>1</option>
-										<option>2</option>
-										<option>3</option>
-										<option>4</option>
-										<option>5</option>
-									</select>
-								</div>
-							</div>
-							<div class="form-group">
-								<div class="col-lg-10 col-lg-offset-2">
-									<button class="btn btn-default">Cancel</button>
-									<button type="submit" class="btn btn-primary">Submit</button>
-								</div>
-							</div>
-						</fieldset>
-					</form>
-				</div>
+								<div class="form-group"></div>
+								<div class="form-group">
+									<label for="textArea" class="col-lg-2 control-label">Your Message for us:</label>
+									<div class="col-lg-10">
+										<textarea class="form-control" rows="10" id="textArea"></textarea>
 
-				<div class="tab-pane fade" id="dropdown1">
-					<p>Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork.</p>
-				</div>
-				<div class="tab-pane fade" id="dropdown2">
-					<p>Trust fund seitan letterpress, keytar raw denim keffiyeh etsy art party before they sold out master cleanse gluten-free squid scenester freegan cosby sweater. Fanny pack portland seitan DIY, art party locavore wolf cliche high life echo park Austin. Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold out farm-to-table VHS viral locavore cosby sweater.</p>
+									</div>
+								</div>
+								<div class="form-group"></div>
+								<div class="form-group"></div>
+								<div class="form-group">
+									<div class="col-lg-10 col-lg-offset-2">
+										<button class="btn btn-default">Cancel</button>
+										<button type="submit" class="btn btn-primary">Submit</button>
+									</div>
+								</div>
+							</fieldset>
+						</form>
+					</div>
+
+					<div class="tab-pane fade" id="dropdown1">
+						<p>Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork.</p>
+					</div>
+					<div class="tab-pane fade" id="dropdown2">
+						<p>Trust fund seitan letterpress, keytar raw denim keffiyeh etsy art party before they sold out master cleanse gluten-free squid scenester freegan cosby sweater. Fanny pack portland seitan DIY, art party locavore wolf cliche high life echo park Austin. Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold out farm-to-table VHS viral locavore cosby sweater.</p>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 
 
-	<script src="bootstrap/js/bootstrap.min.js"></script>
-	<script type="bootstrap/js/respond.js"></script>
-</body>
-</html>
+		<script src="bootstrap/js/bootstrap.min.js"></script>
+		<script type="bootstrap/js/respond.js"></script>
+	</body>
+	</html>
